--- a/site/settings/system.yaml
+++ b/site/settings/system.yaml
@@ -1,6 +1,44 @@
-app_key: kVB3QKblaKVyLuDgasdYOdnhGFx606T5
+license_key: ""
 locales:
   en:
     full: en_US
     name: English
-    url: http://scottishamerican.dev/
+    url: https://scottishamerican.usefinch.us
+timezone: UTC
+date_format: F jS, Y
+default_extension: md
+filesystems:
+  content:
+    driver: local
+    root: site/content
+  storage:
+    driver: local
+    root: site/storage
+  users:
+    driver: local
+    root: site/users
+  themes:
+    driver: local
+    root: site/themes
+    url: /site/themes
+app_key: kVB3QKblaKVyLuDgasdYOdnhGFx606T5
+redactor:
+  - 
+    name: Standard
+    settings:
+      buttons:
+        - formatting
+        - bold
+        - italic
+        - unorderedlist
+        - orderedlist
+        - html
+  - 
+    name: Basic
+    settings:
+      buttons:
+        - bold
+        - italic
+csrf_exclude: [ ]
+send_powered_by_header: true
+ensure_unique_ids: true
