--- a/site/storage/assets/380dc8d9-481c-4d18-9162-ecd5688f98a8/default-uploads/folder.yaml
+++ b/site/storage/assets/380dc8d9-481c-4d18-9162-ecd5688f98a8/default-uploads/folder.yaml
@@ -26,3 +26,7 @@ assets:
     file: payment-1477762555.png
   401bf6af-09e3-43f2-8d3b-0acd04666ebe:
     file: handshake.jpg
+  27fa0ae5-c848-4e4e-b3f1-2309b2e2afdf:
+    file: ScotAm-Partners-hearder-imgs.png
+  18026b25-d0ad-479a-a6c5-f4bed3eda196:
+    file: ScotAm-Partners-header.png
